--- a/yes.html
+++ b/yes.html
@@ -24,7 +24,7 @@
       <h2>I knew you’d say yes! 💖</h2>
       <p>
         You've made me the happiest person in the world. Can't wait to celebrate
-        this special day with you! 🌹💞💗
+        this special day with you, ISHU! 🌹💞💗
       </p>
       <div class="tiny-hearts" aria-hidden="true">💗 💗 💗</div>
     </div>
@@ -52,3 +52,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
